# ESD-T4

./: compose.yaml
Listings/: .gitignore  Dockerfile  listings-DESKTOP-65UTTF4.js  listings.js  listingsEndPoints.txt  package-lock.json  package.json  serviceAccountKeyListings.json
backend/: Dockerfile  index.js
bid-for-listing-complex/: index.js  package-lock.json  package.json  swagger.js
bid_microservice/: Makefile  README.md
bid_microservice/service/: Dockerfile  README.md  db-compose.yml  docker-compose.yml  env  pyproject.toml  server.py
bid_microservice/service/utils/: drop.py  seed.py
close_auction/: .gitignore  Dockerfile  app.py  requirements.txt
createListing-complex/: index.js  package-lock.json  package.json  router.js  service.js
createlisting-complex/: Dockerfile  swagger.json
emailer/: Dockerfile  emailer.py  emailservice.py  env  requirements.txt
esdUi/: Dockerfile  package.json
esdUi/src/: main.js
esdUi/src/pages/: Bids.vue  (+5 more)
frontend/: Dockerfile  vite.config.js
frontend/src/: App.jsx
kong-custom/: Dockerfile  kong.conf.default  kong.yml
notification-rabbitmq/: amqp_setup.py  requirements.txt
payment-complex/: Dockerfile  index.js  package-lock.json  package.json  router.js  service.js  swagger.json
ping-backend/: Dockerfile  index.js  package.json
rabbitmq/: Dockerfile  amqp_setup.py
send-notification/: .gitignore  Dockerfile  amqp_connection.py  requirements.txt  sender.py
show_listing/: Dockerfile  index.js  package-lock.json  package.json
transactions_backend/: dockerfile  env  manage.py  requirements.txt
(+36 files in other folders)
